--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "happydrink",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wilfort.github.io/react-happydrink-exercice/",
   "dependencies": {
     "firebase": "^5.5.0",
     "gh-pages": "^2.0.0",
@@ -14,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm rum build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
